--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev:windows": "\"npx prisma generate\" & next dev",
-    "dev:mac": "npx prisma generate next dev",
+    "dev:mac": "npx prisma generate && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
